--- a/django-api/requirements.txt
+++ b/django-api/requirements.txt
@@ -1,4 +1,6 @@
 Django>=3.0.7,<3.1.0
 djangorestframework>=3.11.0,<3.12.0
 psycopg2-binary==2.8.6
+django-webpack-loader
+django-cors-headers
 django-environ
