--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 
 services:
-  app:
+  api:
     build: ./django-api
     ports:
       - "8000:8000"
@@ -14,6 +14,15 @@ services:
       - DATABASE_URL=postgres://postgres:postgres@db:5432/postgres
     depends_on:
       - db
+  front: 
+    build:
+      context: ./front/
+      dockerfile: Dockerfile
+    volumes:
+      - ./front/app:/usr/src/app
+    command: 'yarn dev'
+    ports:
+      - "3000:3000"
   db:
     image: postgres
     environment:
